--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.redBorder</groupId>
-    <artifactId>storm</artifactId>
+    <groupId>com.redborder</groupId>
+    <artifactId>storm-enriquecimiento</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
 
-    <name>storm</name>
+    <name>storm-enriquecimiento</name>
     <url>http://maven.apache.org</url>
 
     <properties>
@@ -53,45 +53,48 @@
 
     
     <dependencies>
-                                
+                            
+        <!-- GeoIP -->    
         <dependency>
             <groupId>com.maxmind.geoip</groupId>
             <artifactId>geoip-api</artifactId>
             <version>1.2.11</version>
         </dependency>
         
+        <!-- Yaml -->
         <dependency>
             <groupId>org.jyaml</groupId>
             <artifactId>jyaml</artifactId>
             <version>1.3</version>
         </dependency>
         
-        <dependency>
+        <!-- Storm -->
+        <!--dependency>
             <groupId>storm</groupId>
             <artifactId>storm</artifactId>
             <version>0.9.0-mmx4</version>
             <scope>provided</scope>
+        </dependency--> 
+        <dependency>
+            <groupId>org.apache.storm</groupId>
+            <artifactId>storm-70k-core</artifactId>
+            <version>0.9.2</version>
+            <scope>provided</scope>
         </dependency>
         
-        <!--dependency>
-            <groupId>org.apache.storm</groupId>
-            <artifactId>storm-core</artifactId>
-            <version>0.9.1-incubating</version>
-            <scope>provided</scope>
-        </dependency-->
-        
+        <!-- Jackson JSON -->
         <dependency>
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-mapper-asl</artifactId>
             <version>1.9.13</version>
-        </dependency>
-            
+        </dependency>           
         <dependency>
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-core-asl</artifactId>
             <version>1.9.13</version>
         </dependency>
         
+        <!-- Stream twitter HouseBird -->
         <dependency>
             <groupId>com.twitter</groupId>
             <artifactId>hbc-core</artifactId>
@@ -105,6 +108,7 @@
             </exclusions>
         </dependency>
         
+        <!-- Tranquility (druid) -->
         <dependency>
             <groupId>com.metamx</groupId>
             <artifactId>tranquility</artifactId>
@@ -121,6 +125,7 @@
             </exclusions>
         </dependency>
         
+        <!-- Kafka Spout -->
         <dependency>
             <groupId>net.wurstmeister.storm</groupId>
             <artifactId>storm-kafka-0.8-plus</artifactId>
@@ -137,6 +142,7 @@
             </exclusions>
         </dependency>
         
+        <!-- Memcached dependency -->
         <dependency>
             <groupId>com.thimbleware.jmemcached</groupId>
             <artifactId>jmemcached-core</artifactId>
@@ -148,8 +154,7 @@
                     <groupId>org.slf4j</groupId>
                 </exclusion>
             </exclusions>
-        </dependency>
-        
+        </dependency>      
         <dependency>
             <groupId>com.twitter</groupId>
             <artifactId>finagle-memcached_2.9.2</artifactId>
@@ -165,13 +170,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        
         <dependency>
             <groupId>com.twitter</groupId>
             <artifactId>util-hashing_2.9.2</artifactId>
             <version>6.13.0</version>
-        </dependency>
-        
+        </dependency>   
         <dependency>
             <groupId>com.twitter</groupId>
             <artifactId>util-core_2.9.2</artifactId>
@@ -182,8 +185,7 @@
                     <artifactId>guava</artifactId>
                 </exclusion>
             </exclusions>
-        </dependency>
-        
+        </dependency> 
         <dependency>
             <groupId>com.twitter</groupId>
             <artifactId>util-collection_2.9.2</artifactId>
@@ -195,7 +197,6 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        
         <dependency>
             <groupId>com.twitter</groupId>
             <artifactId>util-logging_2.9.2</artifactId>
@@ -207,7 +208,6 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        
         <dependency>
             <groupId>com.twitter</groupId>
             <artifactId>finagle-core_2.9.2</artifactId>
@@ -219,7 +219,6 @@
                 </exclusion>
             </exclusions>
         </dependency>
-
     </dependencies>
     
     <build>
