change name enriquecimiento-redBorder to redBorder-BI and change path of config files

--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.redborder</groupId>
-    <artifactId>storm-enriquecimiento</artifactId>
+    <groupId>net.redborder</groupId>
+    <artifactId>redBorder-BI</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
 
-    <name>storm-enriquecimiento</name>
+    <name>redBorder-BI</name>
     <url>http://maven.apache.org</url>
 
     <properties>
