change redBorder-BI-1.0-jar-with-dependencies.jar to redBorder-BI-1.0-selfcontained.jar

--- a/pom.xml
+++ b/pom.xml
@@ -234,7 +234,7 @@
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
                     <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                        <descriptorRef>selfcontained</descriptorRef>
                     </descriptorRefs>
                     <archive>
                         <manifest>
