--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
         <druid.version>0.6.58</druid.version>
         <finagle.version>6.11.1</finagle.version>
         <jackson.version>2.2.2</jackson.version>
-        <tranquility.version>0.1.14</tranquility.version>
+        <tranquility.version>0.1.16</tranquility.version>
     </properties>
 
     <repositories>
@@ -71,9 +71,9 @@
         
         <!-- Storm -->
         <dependency>
-            <groupId>storm</groupId>
-            <artifactId>storm</artifactId>
-            <version>0.9.0-mmx4</version>
+            <groupId>org.apache.storm</groupId>
+            <artifactId>storm-core</artifactId>
+            <version>0.9.1-incubating-mmx2</version>
             <scope>provided</scope>
         </dependency> 
         
