--- a/pom.xml
+++ b/pom.xml
@@ -236,6 +236,8 @@
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
+                    <finalName>redBorder-BI-1.0-selfcontained</finalName>
+                    <appendAssemblyId>false</appendAssemblyId>
                     <archive>
                         <manifest>
                             <mainClass></mainClass>
