--- a/lib/kafka-storm/pom.xml
+++ b/lib/kafka-storm/pom.xml
@@ -116,9 +116,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.apache.curator</groupId>
+            <groupId>com.netflix.curator</groupId>
             <artifactId>curator-framework</artifactId>
-            <version>2.4.0</version>
+            <version>1.3.3</version>
             <exclusions>
                 <exclusion>
                     <groupId>log4j</groupId>
@@ -131,9 +131,9 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>org.apache.curator</groupId>
+            <groupId>com.netflix.curator</groupId>
             <artifactId>curator-recipes</artifactId>
-            <version>2.4.0</version>
+            <version>1.3.3</version>
             <exclusions>
                 <exclusion>
                     <groupId>log4j</groupId>
@@ -143,9 +143,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.apache.curator</groupId>
+            <groupId>com.netflix.curator</groupId>
             <artifactId>curator-test</artifactId>
-            <version>2.4.0</version>
+            <version>1.3.3</version>
             <exclusions>
                 <exclusion>
                     <groupId>log4j</groupId>
@@ -173,14 +173,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
-                
         <dependency>
             <groupId>org.apache.storm</groupId>
             <artifactId>storm-core</artifactId>
             <version>0.9.1-incubating</version>
             <scope>provided</scope>
         </dependency>
-        
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>log4j-over-slf4j</artifactId>
@@ -192,12 +190,6 @@
             <artifactId>clojure</artifactId>
             <version>1.4.0</version>
             <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.googlecode.json-simple</groupId>
-            <artifactId>json-simple</artifactId>
-            <version>1.1</version>
-            <type>jar</type>
         </dependency>
     </dependencies>
     <distributionManagement>
