--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>net.redborder</groupId>
-    <artifactId>redBorder-BI</artifactId>
-    <version>1.0</version>
+    <project.artifactId>redBorder-BI</project.artifactId>
+    <project.version>1.0</project.version>
     <packaging>jar</packaging>
 
     <name>redBorder-BI</name>
@@ -12,12 +12,9 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <scala.version>2.9.3</scala.version>
-        <curator.version>2.4.0</curator.version>
-        <druid.version>0.6.58</druid.version>
         <finagle.version>6.11.1</finagle.version>
         <jackson.version>2.2.2</jackson.version>
-        <tranquility.version>0.1.18</tranquility.version>
+        <tranquility.version>0.1.19</tranquility.version>
     </properties>
 
     <repositories>
@@ -54,24 +51,6 @@
 
     
     <dependencies>
-                  
-        <dependency>
-            <groupId>nl.minvenj.nfi.storm</groupId>
-            <artifactId>kafka-spout</artifactId>
-            <version>0.2-SNAPSHOT</version>
-        </dependency>
-        
-        <dependency>
-            <groupId>org.scala-lang</groupId>
-            <artifactId>scala-compiler</artifactId>
-            <version>${scala.version}</version>
-        </dependency>
-        
-        <dependency>
-            <groupId>org.scala-lang</groupId>
-            <artifactId>scala-library</artifactId>
-            <version>${scala.version}</version>
-        </dependency>
         
         <!-- GeoIP -->    
         <dependency>
@@ -91,16 +70,16 @@
         <dependency>
             <groupId>org.apache.storm</groupId>
             <artifactId>storm-core</artifactId>
-            <version>0.9.1-incubating-mmx2</version>
+            <version>0.9.2-incubating-SNAPSHOT</version>
             <scope>provided</scope>
-        </dependency> 
+        </dependency>
         
-        <!--dependency>
+        <!-- Storm Kafka -->
+        <dependency>
             <groupId>org.apache.storm</groupId>
-            <artifactId>storm-70k-core</artifactId>
-            <version>0.9.2</version>
-            <scope>provided</scope>
-        </dependency-->
+            <artifactId>storm-kafka</artifactId>
+            <version>0.9.2-incubating-SNAPSHOT</version>
+        </dependency>
         
         <!-- Jackson JSON -->
         <dependency>
@@ -143,13 +122,6 @@
                     <groupId>org.slf4j</groupId>
                 </exclusion>
             </exclusions>
-        </dependency>
-        
-        <!-- Kafka Spout -->
-        <dependency>
-            <groupId>org.clojars.brenden</groupId>
-            <artifactId>storm-kafka-0.8-plus</artifactId>
-            <version>0.2.11</version>
         </dependency>
         
         <!-- Memcached dependency -->
@@ -259,7 +231,7 @@
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
-                    <finalName>${artifactId}-${version}-selfcontained</finalName>
+                    <finalName>${project.artifactId}-${project.version}-selfcontained</finalName>
                     <appendAssemblyId>false</appendAssemblyId>
                     <archive>
                         <manifest>
