--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>com.twitter</groupId>
+            <artifactId>kafka_2.9.2</artifactId>
+            <version>0.7.0</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     
     <build>
