Updated storm. Changed jackson to Boon. Updated Mapper.

--- a/lib/storm-0.9.2/conf/defaults.yaml
+++ b/lib/storm-0.9.2/conf/defaults.yaml
@@ -112,12 +112,12 @@ storm.messaging.netty.min_wait_ms: 100
 ### topology.* configs are for specific executing storms
 topology.enable.message.timeouts: true
 topology.debug: false
-topology.optimize: true
 topology.workers: 1
 topology.acker.executors: null
 topology.tasks: null
 # maximum amount of time a message has to complete before it's considered failed
 topology.message.timeout.secs: 30
+topology.multilang.serializer: "backtype.storm.multilang.JsonSerializer"
 topology.skip.missing.kryo.registrations: false
 topology.max.task.parallelism: null
 topology.max.spout.pending: null
