--- a/lib/storm-0.9.2/external/storm-kafka/pom.xml
+++ b/lib/storm-0.9.2/external/storm-kafka/pom.xml
@@ -18,16 +18,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-	
+
     <parent>
         <artifactId>storm</artifactId>
         <groupId>org.apache.storm</groupId>
         <version>0.9.2-incubating-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
-	
+
     <packaging>jar</packaging>
-	<artifactId>storm-kafka</artifactId>
+    <artifactId>storm-kafka</artifactId>
     <name>storm-kafka</name>
     <description>Storm Spouts for Apache Kafka</description>
     <properties>
@@ -61,9 +61,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.netflix.curator</groupId>
+            <groupId>org.apache.curator</groupId>
             <artifactId>curator-framework</artifactId>
-            <version>1.3.3</version>
+            <version>${curator.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>log4j</groupId>
@@ -76,9 +76,9 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>com.netflix.curator</groupId>
+            <groupId>org.apache.curator</groupId>
             <artifactId>curator-recipes</artifactId>
-            <version>1.3.3</version>
+            <version>${curator.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>log4j</groupId>
@@ -88,9 +88,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.netflix.curator</groupId>
+            <groupId>org.apache.curator</groupId>
             <artifactId>curator-test</artifactId>
-            <version>1.3.3</version>
+            <version>${curator.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>log4j</groupId>
