--- a/pom.xml
+++ b/pom.xml
@@ -58,18 +58,12 @@
             <version>0.9.2-incubating-SNAPSHOT</version>
         </dependency>
         
-        <!-- Jackson JSON -->
+        <!-- Boon JSON Parser -->
         <dependency>
-            <groupId>org.codehaus.jackson</groupId>
-            <artifactId>jackson-mapper-asl</artifactId>
-            <version>1.9.13</version>
-        </dependency>
-        
-        <dependency>
-            <groupId>org.codehaus.jackson</groupId>
-            <artifactId>jackson-core-asl</artifactId>
-            <version>1.9.13</version>
-        </dependency>
+            <groupId>io.fastjson</groupId>
+            <artifactId>boon</artifactId>
+            <version>0.11</version>
+       </dependency>
         
         <!-- Tranquility (druid) -->
         <dependency>
@@ -111,6 +105,7 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        
     </dependencies>
     
     <build>
