--- a/lib/kafka-state/pom.xml
+++ b/lib/kafka-state/pom.xml
@@ -72,6 +72,12 @@
             <version>0.9.2-incubating-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.3.2</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 
     <build>
