--- a/lib/kafka-state/pom.xml
+++ b/lib/kafka-state/pom.xml
@@ -87,6 +87,12 @@
             <version>0.9.2-incubating-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
+        <!-- Boon JSON Parser -->
+        <dependency>
+            <groupId>io.fastjson</groupId>
+            <artifactId>boon</artifactId>
+            <version>0.11</version>
+       </dependency>
     </dependencies>
 
     <build>
@@ -114,14 +120,13 @@
                         </goals>
                     </execution>
                 </executions>
-
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>7</source>
+                    <target>7</target>
                 </configuration>
             </plugin>
         </plugins>
