--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
             <version>0.9.2-incubating-SNAPSHOT</version>
         </dependency>
         
-         <!-- Jackson JSON -->
+        <!-- Jackson JSON -->
         <dependency>
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-mapper-asl</artifactId>
@@ -108,6 +108,23 @@
                 <exclusion>
                     <groupId>log4j</groupId>
                     <artifactId>log4j</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        
+        <!-- Kafka producer -->
+        <dependency>
+            <groupId>com.github.quintona</groupId>
+            <artifactId>trident-kafka-push</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>slf4j-log4j12</artifactId>
+                    <groupId>org.slf4j</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>slf4j-api</artifactId>
+                    <groupId>org.slf4j</groupId>
                 </exclusion>
             </exclusions>
         </dependency>
