--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,13 @@
             <version>1.4.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>redBorder-storm</groupId>
+            <artifactId>metrics-kafka</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+
     </dependencies>
     
     <build>
