--- a/lib/metrics-storm/pom.xml
+++ b/lib/metrics-storm/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>redBorder-storm</groupId>
     <artifactId>metrics-kafka</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.1</version>
 
     <dependencies>
         <!-- Kafka -->
