--- a/lib/storm-0.9.2/pom.xml
+++ b/lib/storm-0.9.2/pom.xml
@@ -131,7 +131,7 @@
         <module>storm-buildtools/maven-shade-clojure-transformer</module>
         <module>storm-core</module>
         <module>examples/storm-starter</module>
-        <module>external/storm-kafka</module>
+        <module>external/storm-kafka-redBorder</module>
     </modules>
 
     <scm>
