--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
         <!-- Storm Kafka -->
         <dependency>
             <groupId>org.apache.storm</groupId>
-            <artifactId>storm-kafka</artifactId>
+            <artifactId>storm-kafka-redBorder</artifactId>
             <version>0.9.2-incubating-SNAPSHOT</version>
         </dependency>
         
@@ -119,6 +119,14 @@
                     <artifactId>slf4j-api</artifactId>
                     <groupId>org.slf4j</groupId>
                 </exclusion>
+                <exclusion>
+                    <artifactId>storm-kafka</artifactId>
+                    <groupId>org.apache.storm</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>kafka_2.9.2</artifactId>
+                    <groupId>com.twitter</groupId>
+                </exclusion>
             </exclusions>
         </dependency>
         
@@ -129,12 +137,13 @@
             <version>1.4.4</version>
         </dependency>
 
+
+        <!-- Metrics -->
         <dependency>
             <groupId>redBorder-storm</groupId>
             <artifactId>metrics-kafka</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.1</version>
         </dependency>
-
 
     </dependencies>
     
