--- a/pom.xml
+++ b/pom.xml
@@ -140,11 +140,17 @@
 
         <!-- Metrics -->
         <dependency>
-            <groupId>redBorder-storm</groupId>
+            <groupId>net.redborder.storm</groupId>
             <artifactId>metrics-kafka</artifactId>
             <version>1.1</version>
         </dependency>
 
+        <!-- GridGain State -->
+        <dependency>
+            <groupId>net.redborder.storm</groupId>
+            <artifactId>gridgain-trident-state</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     
     <build>
