--- a/lib/metrics-storm/pom.xml
+++ b/lib/metrics-storm/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>redBorder-storm</groupId>
+    <groupId>net.redborder.storm</groupId>
     <artifactId>metrics-kafka</artifactId>
     <version>1.1</version>
 
