--- a/lib/gridgain-state/pom.xml
+++ b/lib/gridgain-state/pom.xml
@@ -21,6 +21,12 @@
             <artifactId>gridgain-core</artifactId>
             <version>6.1.8</version>
         </dependency>
+        <!-- Yaml -->
+        <dependency>
+            <groupId>org.jyaml</groupId>
+            <artifactId>jyaml</artifactId>
+            <version>1.3</version>
+        </dependency>
 
         <dependency>
             <groupId>org.gridgain</groupId>
