Added new test!

--- a/topology/pom.xml
+++ b/topology/pom.xml
@@ -25,6 +25,14 @@
     </repositories>
 
     <dependencies>
+
+        <!-- Junit -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
         
         <!-- GeoIP -->    
         <dependency>
@@ -146,6 +154,12 @@
                     <source>7</source>
                     <target>7</target>
                 </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.17</version>
             </plugin>
 
         </plugins>
