--- a/topology/pom.xml
+++ b/topology/pom.xml
@@ -155,7 +155,12 @@
                     <target>7</target>
                 </configuration>
             </plugin>
-
         </plugins>
+
+        <testResources>
+            <testResource>
+                <directory>src/main/resources</directory>
+            </testResource>
+        </testResources>
     </build>
 </project>
