--- a/topology/pom.xml
+++ b/topology/pom.xml
@@ -33,21 +33,21 @@
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
-        
-        <!-- GeoIP -->    
+
+        <!-- GeoIP -->
         <dependency>
             <groupId>com.maxmind.geoip</groupId>
             <artifactId>geoip-api</artifactId>
             <version>1.2.11</version>
         </dependency>
-        
+
         <!-- Yaml -->
         <dependency>
             <groupId>org.jyaml</groupId>
             <artifactId>jyaml</artifactId>
             <version>1.3</version>
         </dependency>
-        
+
         <!-- Tranquility (druid) -->
         <dependency>
             <groupId>com.metamx</groupId>
@@ -94,7 +94,7 @@
         </dependency>
 
     </dependencies>
-    
+
     <build>
         <plugins>
             <!--
@@ -153,6 +153,15 @@
                 <configuration>
                     <source>7</source>
                     <target>7</target>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.17</version>
+                <configuration>
+                    <skipTests>false</skipTests>
                 </configuration>
             </plugin>
         </plugins>
