--- a/topology/pom.xml
+++ b/topology/pom.xml
@@ -168,7 +168,7 @@
 
         <testResources>
             <testResource>
-                <directory>src/main/resources</directory>
+                <directory>src/test/resources</directory>
             </testResource>
         </testResources>
     </build>
