changed package name.

--- a/topology/pom.xml
+++ b/topology/pom.xml
@@ -26,6 +26,40 @@
 
     <dependencies>
 
+
+        <!-- Stratio Streaming -->
+        <dependency>
+            <groupId>com.stratio.streaming</groupId>
+            <artifactId>streaming-commons</artifactId>
+            <version>0.3.3</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>slf4j-log4j12</artifactId>
+                    <groupId>org.slf4j</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>slf4j-api</artifactId>
+                    <groupId>org.slf4j</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>com.stratio.streaming</groupId>
+            <artifactId>streaming-api</artifactId>
+            <version>0.3.3</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>slf4j-log4j12</artifactId>
+                    <groupId>org.slf4j</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>slf4j-api</artifactId>
+                    <groupId>org.slf4j</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
         <!-- Junit -->
         <dependency>
             <groupId>junit</groupId>
