--- a/topology/pom.xml
+++ b/topology/pom.xml
@@ -2,13 +2,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>topology</artifactId>
-    <version>1.1</version>
+    <version>1.2</version>
     <packaging>jar</packaging>
 
     <parent>
         <groupId>net.redborder</groupId>
         <artifactId>redborder-bi</artifactId>
-        <version>1.1</version>
+        <version>1.2</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -58,6 +58,13 @@
                     <groupId>org.slf4j</groupId>
                 </exclusion>
             </exclusions>
+        </dependency>
+
+        <!-- Riak -->
+        <dependency>
+            <groupId>com.basho.riak</groupId>
+            <artifactId>riak-client</artifactId>
+            <version>1.4.4</version>
         </dependency>
 
         <!-- Junit -->
