--- a/lib/storm-kafka/pom.xml
+++ b/lib/storm-kafka/pom.xml
@@ -29,6 +29,7 @@
     <packaging>jar</packaging>
     <artifactId>storm-kafka</artifactId>
     <name>storm-kafka</name>
+    <version>1.1</version>
     <description>Storm Spouts for Apache Kafka</description>
 
     <properties>
