--- a/topology/pom.xml
+++ b/topology/pom.xml
@@ -119,7 +119,7 @@
         <dependency>
             <groupId>com.metamx</groupId>
             <artifactId>tranquility_2.10</artifactId>
-            <version>0.2.12</version>
+            <version>0.2.16</version>
             <exclusions>
                 <exclusion>
                     <artifactId>slf4j-log4j12</artifactId>
@@ -129,9 +129,19 @@
                     <artifactId>slf4j-api</artifactId>
                     <groupId>org.slf4j</groupId>
                 </exclusion>
+                <exclusion>
+                    <artifactId>netty</artifactId>
+                    <groupId>io.netty</groupId>
+                </exclusion>
             </exclusions>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.2.2</version>
+        </dependency>
+        
         <!-- GridGain State -->
         <dependency>
             <groupId>net.redborder</groupId>
