--- a/topology/pom.xml
+++ b/topology/pom.xml
@@ -2,13 +2,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>topology</artifactId>
-    <version>1.2</version>
+    <version>1.3</version>
     <packaging>jar</packaging>
 
     <parent>
         <groupId>net.redborder</groupId>
         <artifactId>redborder-bi</artifactId>
-        <version>1.2</version>
+        <version>1.3</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -168,6 +168,13 @@
             <groupId>net.redborder</groupId>
             <artifactId>storm-kafka</artifactId>
             <version>1.1</version>
+        </dependency>
+
+        <!-- Siddhi Storm -->
+        <dependency>
+            <groupId>net.redborder</groupId>
+            <artifactId>siddhi-storm</artifactId>
+            <version>1.2</version>
         </dependency>
 
     </dependencies>
