--- a/lib/siddhi-storm/pom.xml
+++ b/lib/siddhi-storm/pom.xml
@@ -52,9 +52,9 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.github.quintona</groupId>
-            <artifactId>trident-kafka-push</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>net.redborder</groupId>
+            <artifactId>kafka-state</artifactId>
+            <version>1.1</version>
         </dependency>
     </dependencies>
 
