--- a/topology/pom.xml
+++ b/topology/pom.xml
@@ -165,10 +165,16 @@
         </dependency>
 
         <!-- Storm Kafka -->
-        <dependency>
+        <!--dependency>
             <groupId>net.redborder</groupId>
             <artifactId>storm-kafka</artifactId>
             <version>1.1</version>
+        </dependency-->
+
+        <dependency>
+            <groupId>org.apache.storm</groupId>
+            <artifactId>storm-kafka</artifactId>
+            <version>0.9.3</version>
         </dependency>
 
         <!-- Siddhi Storm -->
