Added PostgreSQLFunction to query locationWLC.

--- a/topology/pom.xml
+++ b/topology/pom.xml
@@ -184,6 +184,13 @@
             <version>1.2</version>
         </dependency>
 
+        <!-- PostgreSQL -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.3-1102-jdbc41</version>
+        </dependency>
+
     </dependencies>
 
     <build>
