--- a/lib/siddhi-storm/pom.xml
+++ b/lib/siddhi-storm/pom.xml
@@ -48,9 +48,10 @@
         <dependency>
             <groupId>org.apache.storm</groupId>
             <artifactId>storm-core</artifactId>
-            <version>0.9.2-incubating</version>
+            <version>0.9.3</version>
             <scope>provided</scope>
         </dependency>
+
         <dependency>
             <groupId>net.redborder</groupId>
             <artifactId>kafka-state</artifactId>
